# codex-fleet

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README_CN.md  docker-compose.yml
.sqlx/: query-00687608c6e43a36e21de7981e9c97750dcc8bce8b6204494cc9d53b94fbb1dd.json  query-01b4dce244f53ef3bb4aaad186d6c95f13778e20901afa1dc2809c5ad8e9a2f2.json  query-02bd90e372a57bcd6659f53ef961395cc0583947b831cbd494696e039922410c.json  query-02c1a823bd8f5cd2fe64d53d52adcca2aa6a9b9595f616a90195aa7d0feb5ee6.json  query-03d4ae6a4e5b3d2b187a075237dcc4b63f4bb98ce8c03d936b1828d7debc4eac.json  query-0435cf22c8c0caf5a9148a466b44190efe322e87607c08368f5b0ee13f29f578.json  query-054269ae7864a603de33a4c8509a1c44a192ac67e24f6dd6aa6cbe4391c9399d.json  query-0546630c333b6554487e71d03fd534a3fcd0bf833b9076a7ceefbb4c4f471d62.json  query-05e684158f488c77ed96d120b67942fe1217459aab3fcd50de8e9ec01d70aaf6.json  query-08cd18505931d78917ee7197985a0b326b02cb4b09968533c7c8f08f82f791df.json  query-08db2696dd4a23322ac6257c6932cadd2f018fa3a159a507d306e93ae211acf7.json  query-0a609c7991e3da5795b3a5d07e060bf29e99b15306f631ae9128f4e7bffe5608.json  query-0b28820e140a160f7faf73b87c10910743c8e7ac6ec0e16884b8a9ceaba12d20.json  query-0cacffd950002e6518fdd008c4c43f323741ed7a512b9f6d08e93b84b730471c.json  query-0d9620d132288d51aff3e1ec2fb112601017219f96f463f35a2e8c34de70d9ab.json  query-0ee4c09249cb5a4049989482e15208cf830fd0556010f864682a25244aa897b0.json  query-0f797f257a16320fc6b5b7bb0ad6a859b85395d3cd1872c0ca071c81ade6e3fe.json  query-0fb47f0c5df69a2ab99683708deead38cb8c544c09ab9434113f08702b54d383.json  query-10262900866a1b156768f10218e10edbcb230eb99c6b9ca9166646c3252bb6ad.json  query-10946e94c16bc27b168440406a47abf2a230a1d33f4536d7b17de0ccd5f1ac02.json  query-124ff1442dc2ad230932bdc793de75b12e92f90d67055724c165f40a7259df06.json  query-13376f2df4f55123e02411dda84ba169d4f1ca5c4ed0e21241f1ebf87c7fca48.json  query-13a11399dbb1d467b780c2dd23a489d99f4f20b910f71d12ef9302fd456beb65.json  query-14812d14a57da192c79d1a4b533ace5980b2d406d40bee0816ea0c088d566eeb.json  query-153f7d9e860b3419b357b36c53fa6529329e5e4cbd264699b03289eec2230680.json  (+203 more)
crates/backend/: Cargo.toml
crates/backend/migrations/: 001_init.sql  002_agent_user_id.sql  002_configs_update.sql  003_docker_configs.sql  003_kanban_redesign.sql  004_agent_redesign.sql  004_plane_integration.sql  005_provision.sql  006_requirements.sql  006_server_type_no_docker.sql  007_work_item_user.sql  008_task_log.sql  009_task_dir.sql  010_drop_tmux_window.sql  011_scheduler.sql  012_task_title.sql  013_task_result_md.sql  014_rebuild_tasks.sql  015_drop_execution_fk.sql  016_unify_status.sql  017_notification_refactor.sql  018_drop_tmux_session.sql  019_project_notification_ids.sql
crates/backend/src/: config.rs  db.rs  embed.rs  error.rs  main.rs
crates/backend/src/api/: agents.rs  auth.rs  codex_configs.rs  configs.rs  docker_configs.rs  mod.rs  notifications.rs  servers.rs  tasks.rs
crates/backend/src/ssh/: client.rs  mod.rs  tmux.rs
crates/backend/src/templates/agents_md/: AGENTS.md
crates/backend/src/templates/config_files/codex/: auth.json  config.toml
crates/backend/src/ws/: logs.rs  mod.rs  provision.rs  terminal.rs
crates/config_center/: Cargo.toml
crates/config_center/src/: lib.rs
crates/config_center/src/api/: codex_configs.rs  configs.rs  docker_configs.rs  mod.rs
crates/config_center/src/application/: mod.rs
crates/config_center/src/domain/: mod.rs
crates/config_center/src/infrastructure/: mod.rs
crates/iam/: Cargo.toml
crates/iam/src/: lib.rs
crates/iam/src/api/: admin_users.rs  auth.rs  external.rs  mod.rs
crates/iam/src/application/: audit.rs  mod.rs  password.rs  token.rs
crates/iam/src/domain/: mod.rs
crates/iam/src/infrastructure/: mod.rs
crates/notification_center/: Cargo.toml
crates/notification_center/src/: lib.rs
crates/notification_center/src/api/: notifications.rs
crates/notification_center/src/application/: mod.rs
crates/notification_center/src/domain/: mod.rs
crates/notification_center/src/infrastructure/: mod.rs
crates/runtime_agent/: Cargo.toml
crates/runtime_agent/src/: lib.rs  scheduler.rs
crates/runtime_agent/src/api/: agent_groups.rs  agents.rs  mod.rs  plane.rs  requirements.rs  servers.rs  tasks.rs  webhooks.rs
crates/runtime_agent/src/application/: mod.rs
crates/runtime_agent/src/domain/: mod.rs
crates/runtime_agent/src/infrastructure/: crypto.rs  mod.rs  plane_client.rs
crates/runtime_agent/src/ssh/: client.rs  mod.rs  terminal.rs  tmux.rs
crates/runtime_agent/src/ws/: logs.rs  mod.rs  provision.rs  task_logs.rs  terminal.rs
crates/shared_kernel/: Cargo.toml
crates/shared_kernel/src/: auth.rs  clis.rs  config.rs  context.rs  error.rs  lib.rs  notify.rs
docs/: external-api.md  plane-integration.md  (+2 more)
(+42 files in other folders)
