[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono", "uuid"] }
argon2 = "0.5"
rust-embed = { version = "8", features = ["mime_guess"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
dotenvy = "0.15"

shared_kernel = { path = "../shared_kernel" }
iam = { path = "../iam" }
config_center = { path = "../config_center" }
runtime_agent = { path = "../runtime_agent" }
notification_center = { path = "../notification_center" }
