[package]
name = "iam"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
shared_kernel = { path = "../shared_kernel" }
