[package]
name = "notification_center"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
shared_kernel = { path = "../shared_kernel" }
