[package]
name = "runtime_agent"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-trait = "0.1"
async-ssh2-tokio = "0.8"
russh = "0.46"
russh-keys = "0.46"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
shared_kernel = { path = "../shared_kernel" }
