[package]
name = "shared_kernel"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
urlencoding = "2"
